processed/jira/txt/LU/LU-8779.txt
Key:        LU-8779
Summary:    llapi_hsm_log_ct_progress incorrect indenting
Link:       https://jira.whamcloud.com/browse/LU-8779
Type:       Bug
Priority:   Minor
Status:     Closed
Resolution: Duplicate
Assignee:   Alex Zhuravlev
Reporter:   Oleg Drokin
Created:    Sun, 30 Oct 2016 20:21:47 +0000
Updated:    Mon, 31 Oct 2016 18:48:39 +0000
Resolved:   Mon, 31 Oct 2016 18:48:39 +0000
Labels:     easy

--- Description ---
Building on Fedora, we get this build error:

liblustreapi_hsm.c: In function Б─≤llapi_hsm_log_ct_progressБ─≥:
liblustreapi_hsm.c:432:2: error: this Б─≤ifБ─≥ clause does not guard... [-Werror=misleading-indentation]
  if (progress_type == CT_RUNNING)
  ^~
liblustreapi_hsm.c:435:3: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the Б─≤ifБ─≥
   if (rc 

The code looks like this:

        if (progress_type == CT_RUNNING)
                rc = llapi_json_add_item(&json_items, "current_bytes",
                                         LLAPI_JSON_BIGNUM, ¤t);
                if (rc 

I guess in that place it does not matter if we fix the indenting ot add extra parenthesis, but something need to be done to avoid confusion.

--- Comment (bzzz, Mon, 31 Oct 2016 18:48:39 +0000) ---
a dup of LU-8587

--- Comment (bzzz, Mon, 31 Oct 2016 05:23:37 +0000) ---
http://review.whamcloud.com/#/c/22348/
